Bugfix: clickable area was covering whole (invisible) image

--- a/src/components/SearchMapInfoCard/SearchMapInfoCard.css
+++ b/src/components/SearchMapInfoCard/SearchMapInfoCard.css
@@ -20,6 +20,9 @@
 }
 
 .anchor {
+  display: block;
+  overflow: hidden;
+
   &:hover {
     text-decoration: none;
   }
